--- a/_data/event.yml
+++ b/_data/event.yml
@@ -1,12 +1,12 @@
-url: "https://localhackday.mlh.io/lhd-2018/events/909-techmill-inc"
-date: "Saturday, Dec 1, 2018"
+url: "https://www.eventbrite.com/e/dfw-open-data-day-tickets-54305774032"
+date: "Saturday, March 2, 2019"
 venue:
-  name: "UNT Inspire Park"
-  url: "https://frisco.unt.edu/location/inspire-park"
+  name: "Dallas Public Library"
+  url: "http://dallaslibrary2.org/"
   address:
-    street: "6170 Research Rd"
-    city: "Frisco"
+    street: "1515 Young Street"
+    city: "Dallas"
     state: "Texas"
-    zip: "75033"
+    zip: "75201"
     country: "USA"
-    full: "6170 Research Rd, Frisco, TX 75033"
+    full: "1515 Young St, Dallas, TX 75201"
