--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,8 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: techmilldenton/dfwopendataday
   branch: master # Branch to update (optional; defaults to master)
+  site_domain: dfwopendataday.com
 
 # This line should *not* be indented
 media_folder: "assets/img" # Media files will be stored in the repo under images/uploads
