Update package name, add Gulp CLI

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hackntx",
+  "name": "dfwopendataday",
   "version": "1.0.0",
   "description": "Static site for Hack NTX",
   "main": "gulpfile.js",
@@ -14,15 +14,15 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/techmilldenton/hackntx.git"
+    "url": "git+https://github.com/techmilldenton/dfwopendataday.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/techmilldenton/hackntx/issues"
+    "url": "https://github.com/techmilldenton/dfwopendataday/issues"
   },
-  "homepage": "https://github.com/techmilldenton/hackntx#readme",
+  "homepage": "https://github.com/techmilldenton/dfwopendataday#readme",
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@babel/preset-env": "^7.1.6",
@@ -31,6 +31,7 @@
     "gulp": "^4.0.0",
     "gulp-autoprefixer": "^6.0.0",
     "gulp-babel": "^8.0.0",
+    "gulp-cli": "^2.0.1",
     "gulp-minify": "^3.1.0",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.1",
