--- a/admin/config.yml
+++ b/admin/config.yml
@@ -28,7 +28,7 @@ collections:
     fields: # The fields for each document, usually in front matter
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
-      - {label: "Content", name: "content", widget: "markdown"}
+      - {label: "Content", name: "body", widget: "markdown"}
   - name: "page"
     label: "Page"
     folder: "pages"
