Add Rogue Metrics to the site

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -46,6 +46,14 @@
           url: https://www.linkedin.com/company/techmill-llc
         - name: github
           url: https://github.com/techmilldenton
+    - name: Rogue Metrics
+      url: https://www.roguemetrics.com
+      img: /assets/img/sponsors/roguemetrics.jpg
+      social_links:
+        - name: facebook
+          url: https://www.facebook.com/roguemetrics
+        - name: twitter
+          url: https://twitter.com/roguemetrics
 
 # Community sponsors
 - name: Community
@@ -61,7 +69,7 @@
           url: https://twitter.com/opendenton
         - name: github
           url: https://github.com/opendenton
-    - name: Addison Tree House 
+    - name: Addison Tree House
       url: https://www.opendenton.com
       img: /assets/img/sponsors/addisontreehouse.jpg
     - name: UNT ASIS&T
