--- a/_config.yml
+++ b/_config.yml
@@ -45,6 +45,7 @@ sass:
 
 # SEO / Social
 google_analytics: UA-51689839-7
+google_tag_manager: GTM-KBPKJGR
 addthis: ra-54305991214faa92
 
 author: techmilldenton
