--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -18,7 +18,7 @@ toc:
     url: /contact
   - title: Register
     url: https://www.eventbrite.com/e/dfw-open-data-day-tickets-54305774032
-    class: "btn btn-success"
+    class: "btn btn-success register-link"
     target: "_blank"
 footer:
   - title: Home
