Added time, fixed TM logo, moved BR logo

--- a/_data/event.yml
+++ b/_data/event.yml
@@ -1,5 +1,6 @@
 url: "https://www.eventbrite.com/e/dfw-open-data-day-tickets-54305774032"
 date: "Saturday, March 2, 2019"
+time: "8:30am - 5:30pm"
 venue:
   name: "Dallas Public Library"
   url: "http://dallaslibrary2.org/"
