--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -28,7 +28,7 @@
       img: /assets/img/sponsors/nctcog.jpg
     - name: TechMill
       url: https://techmill.co
-      img: /assets/img/sponsors/techmillco.jpeg
+      img: /assets/img/sponsors/techmillco.png
       social_links:
         - name: facebook
           url: https://www.facebook.com/techmilldenton
