--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -104,3 +104,13 @@
           url: https://twitter.com/untasist
         - name: paper-plane
           url: mailto:untasist@gmail.com
+    - name: Datapolitan 
+      url: https://www.datapolitan.com
+      img: /assets/img/sponsors/datapolitan_transparent.png
+      social_links:
+        - name: facebook
+          url: https://facebook.com/datapolitan
+        - name: twitter
+          url: https://twitter.com/datapolitan
+        - name: github
+          url: https://github.com/datapolitan
