--- a/admin/config.yml
+++ b/admin/config.yml
@@ -29,6 +29,17 @@ collections:
       - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Content", name: "body", widget: "markdown"}
+  - name: "challenges" # Used in routes, e.g., /admin/collections/blog
+    label: "Challenge" # Used in the UI
+    folder: "_challenges" # The path to the folder where the documents are stored
+    create: true # Allow users to create new documents in this collection
+    slug: "challenge-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
+    output: false
+    fields: # The fields for each document, usually in front matter
+      - {label: "Layout", name: "layout", widget: "hidden", default: "page"}
+      - {label: "Challenge Name", name: "title", widget: "string"}
+      - {label: "Organization", name: "organization", widget: "string"}
+      - {label: "Content", name: "body", widget: "markdown"}
   - name: "page"
     label: "Page"
     folder: "pages"
