add links, update schedule

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,6 +4,8 @@ toc:
     children:
       - title: Resources
         url: /resources
+      - title: Links
+        url: /links
       - title: Code of Conduct
         url: /conduct
       - title: About TechMill
