update sponsors and venue

--- a/_data/event.yml
+++ b/_data/event.yml
@@ -2,12 +2,12 @@ url: "https://www.eventbrite.com/e/dfw-open-data-day-2020-tickets-90816989059"
 date: "Saturday, March 7, 2020"
 time: "8:30am - 5:30pm"
 venue:
-  name: "Stoke Coworking"
-  url: "https://stokedenton.com"
+  name: "UNT at Frisco"
+  url: "https://frisco.unt.edu"
   address:
-    street: "608 E Hickory St #128"
-    city: "Denton"
+    street: "2811 Internet Blvd #100"
+    city: "Frisco"
     state: "Texas"
-    zip: "76205"
+    zip: "75034"
     country: "USA"
-    full: "608 E Hickory St #128, Denton, Texas 76205"
+    full: "2811 Internet Blvd #100, Frisco, Texas 75034"
